# cvp

./: .gitignore  .vimspector.json  Dockerfile  MANIFEST.in  README.md  black.sh  build-docker.sh  build-pyinstaller.sh  ci.sh  clean.sh  env-template  flake8.sh  generate-font-ranges.sh  isort.cfg  isort.sh  main.py  mypy.sh  project.dic  pytest.ini  python  requirements.deploy.txt  requirements.develop.txt  requirements.main.txt  requirements.test.txt  requirements.txt  setup.cfg  twine.sh  version
.github/workflows/: python-deploy.yml  python-test.yml
.run/: main.run.xml  player.run.xml  worker.run.xml
cvp/: arguments.py  entrypoint.py  variables.py
cvp/apps/: __init__.py
cvp/assets/: .gitignore  __init__.py  download.py
cvp/buffers/: frame.py  lines.py
cvp/colors/: normalize.py  types.py
cvp/concurrency/: runnable.py
cvp/config/: _base.py  base.py  config.py  empty.py  prefix.py  proxy.py  root.py
cvp/context/: __init__.py  autofixer.py  context.py
cvp/ffmpeg/: executable.py  ffmpeg.py  mpeg.py  probe.py
cvp/flow/: arc.py  blueprint.py  catalog.py  datas.py  graph.py  manager.py  node.py  path.py  paths.py  pin.py  prefix.py  template.py
cvp/fonts/: codepoint.py  defaults.py  ranges.py  scale.py  ttf.py
cvp/gl/: texture.py
cvp/gui/: __init__.py  checkbox.py  drag_type.py  draw_list.py  menu_item_ex.py  splitter.py  styles.py
cvp/images/: load.py
cvp/imgui/: calc_log_names_combo_width.py  clipboard.py  combo.py  draw_list.py  font.py  font_builder.py  font_defaults.py  font_manager.py  fonts.py  input_float2.py  input_text.py  input_text_callback.py  input_text_disabled.py  measure_window_roi.py  mouse_button.py  set_window_font_scale.py  slider_float.py  splitter.py  style_disable_input.py  styles.py
cvp/inspect/: argument.py  member.py  (+1 more)
tester/: test_entrypoint.py
(+598 files in other folders)
