[metadata]
name = cvp
description = Computer Vision Player
version = attr: cvp.__version__
author = zer0
author_email = osom8979@gmail.com
maintainer = zer0
maintainer_email = osom8979@gmail.com
url = https://github.com/osom8979/cvp
project_urls =
    GitHub: issues = https://github.com/osom8979/cvp/issues
    GitHub: repo = https://github.com/osom8979/cvp
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords =
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Topic :: Multimedia
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Topic :: Multimedia :: Graphics :: Viewers
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Capture
    Topic :: Multimedia :: Video :: Conversion
    Topic :: Multimedia :: Video :: Display
    Topic :: Multimedia :: Video :: Non-Linear Editor
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Utilities

[options]
python_requires = >=3.11
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    tester*

[options.exclude_package_data]
cvp.assets = .gitignore

[options.entry_points]
console_scripts =
    cvp = cvp.entrypoint:main
